--- a/index.html
+++ b/index.html
@@ -11,21 +11,17 @@
 </head>
 <body>
 
-<!--<textarea ></textarea>-->
-<div class="boxes">
-    <div class="box"><span>1</span></div>
-    <div class="box"><span>2</span></div>
-    <div class="box"><span>3</span></div>
-    <div class="box"><span>4</span></div>
-    <div class="box"><span>5</span></div>
-    <div class="box"><span>6</span></div>
-    <div class="box"><span>7</span></div>
-    <div class="box"><span>8</span></div>
-</div>
+<div class="box"></div>
 
 
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
-<script src="javaScript/resizeObserverAPI.js"></script>
+<!--<script src="javaScript/resizeObserverAPI.js"></script>-->
+<script src="javaScript/spread&rest-operatörler.js"></script>
+<!--<script src="javaScript/concatMetodu.js"></script>-->
+<!--<script src="javaScript/everyMetodu.js"></script>-->
+<!--<script src="javaScript/filterMetodu.js"></script>-->
+<script src="javaScript/reduceMetodu.js"></script>
+
 </body>
 </html>
